if BULLET
noinst_LTLIBRARIES = libBullet.la
libBullet_la_CXXFLAGS = -I@BULLET_SRC_PATH@/src -I@BULLET_SRC_PATH@/src/LinearMath -I@BULLET_SRC_PATH@/src/BulletCollision
libBullet_la_SOURCES = \
	@BULLET_SRC_PATH@/src/LinearMath/btAabbUtil2.h \
	@BULLET_SRC_PATH@/src/LinearMath/btList.h \
	@BULLET_SRC_PATH@/src/LinearMath/btQuickprof.h \
	@BULLET_SRC_PATH@/src/LinearMath/btAlignedAllocator.cpp \
	@BULLET_SRC_PATH@/src/LinearMath/btMatrix3x3.h \
	@BULLET_SRC_PATH@/src/LinearMath/btRandom.h \
	@BULLET_SRC_PATH@/src/LinearMath/btAlignedAllocator.h \
	@BULLET_SRC_PATH@/src/LinearMath/btMinMax.h \
	@BULLET_SRC_PATH@/src/LinearMath/btScalar.h \
	@BULLET_SRC_PATH@/src/LinearMath/btAlignedObjectArray.h	\
	@BULLET_SRC_PATH@/src/LinearMath/btMotionState.h \
	@BULLET_SRC_PATH@/src/LinearMath/btSimdMinMax.h \
	@BULLET_SRC_PATH@/src/LinearMath/btDefaultMotionState.h \
	@BULLET_SRC_PATH@/src/LinearMath/btPoint3.h \
	@BULLET_SRC_PATH@/src/LinearMath/btStackAlloc.h \
	@BULLET_SRC_PATH@/src/LinearMath/btGeometryUtil.cpp \
	@BULLET_SRC_PATH@/src/LinearMath/btQuadWord.h \
	@BULLET_SRC_PATH@/src/LinearMath/btTransform.h \
	@BULLET_SRC_PATH@/src/LinearMath/btGeometryUtil.h \
	@BULLET_SRC_PATH@/src/LinearMath/btQuaternion.h	\
	@BULLET_SRC_PATH@/src/LinearMath/btTransformUtil.h \
	@BULLET_SRC_PATH@/src/LinearMath/btIDebugDraw.h	\
	@BULLET_SRC_PATH@/src/LinearMath/btQuickprof.cpp \
	@BULLET_SRC_PATH@/src/LinearMath/btVector3.h \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btDispatcher.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btDispatcher.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/SphereTriangleDetector.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCollisionObject.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCollisionWorld.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btManifoldResult.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btManifoldResult.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSimulationIslandManager.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btUnionFind.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionDispatch/btUnionFind.h		 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btBoxShape.cpp		 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConeShape.cpp		 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btEmptyShape.h		 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btSphereShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleCallback.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btBoxShape.h		 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConeShape.h		 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btSphereShape.h		 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConvexHullShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h     \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h   	 	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConvexHullShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btStaticPlaneShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleMesh.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btCollisionMargin.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConvexShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btMinkowskiSumShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleMesh.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btCollisionShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConvexShape.h			 	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btMultiSphereShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btStridingMeshInterface.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btCollisionShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btMultiSphereShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleMeshShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btCompoundShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btOptimizedBvh.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTetrahedronShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btCompoundShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btCylinderShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btOptimizedBvh.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleBuffer.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConcaveShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btCylinderShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleBuffer.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btConcaveShape.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btEmptyShape.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h \
	@BULLET_SRC_PATH@/src/BulletCollision/CollisionShapes/btTriangleCallback.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkEpa.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp\
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkEpa.h		 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btConvexCast.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h\
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btPointCollector.h	 \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h \
	@BULLET_SRC_PATH@/src/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp

endif