if BULLET
noinst_LTLIBRARIES = libBullet.la
libBullet_la_CXXFLAGS = -I@BULLET_SRC_PATH@ -I@BULLET_SRC_PATH@/LinearMath -I@BULLET_SRC_PATH@/BulletCollision
libBullet_la_SOURCES = \
	@BULLET_SRC_PATH@/LinearMath/btAabbUtil2.h \
	@BULLET_SRC_PATH@/LinearMath/btList.h \
	@BULLET_SRC_PATH@/LinearMath/btQuickprof.h \
	@BULLET_SRC_PATH@/LinearMath/btAlignedAllocator.cpp \
	@BULLET_SRC_PATH@/LinearMath/btMatrix3x3.h \
	@BULLET_SRC_PATH@/LinearMath/btRandom.h \
	@BULLET_SRC_PATH@/LinearMath/btAlignedAllocator.h \
	@BULLET_SRC_PATH@/LinearMath/btMinMax.h \
	@BULLET_SRC_PATH@/LinearMath/btScalar.h \
	@BULLET_SRC_PATH@/LinearMath/btAlignedObjectArray.h	\
	@BULLET_SRC_PATH@/LinearMath/btMotionState.h \
	@BULLET_SRC_PATH@/LinearMath/btSimdMinMax.h \
	@BULLET_SRC_PATH@/LinearMath/btDefaultMotionState.h \
	@BULLET_SRC_PATH@/LinearMath/btPoint3.h \
	@BULLET_SRC_PATH@/LinearMath/btStackAlloc.h \
	@BULLET_SRC_PATH@/LinearMath/btGeometryUtil.cpp \
	@BULLET_SRC_PATH@/LinearMath/btQuadWord.h \
	@BULLET_SRC_PATH@/LinearMath/btTransform.h \
	@BULLET_SRC_PATH@/LinearMath/btGeometryUtil.h \
	@BULLET_SRC_PATH@/LinearMath/btQuaternion.h	\
	@BULLET_SRC_PATH@/LinearMath/btTransformUtil.h \
	@BULLET_SRC_PATH@/LinearMath/btIDebugDraw.h	\
	@BULLET_SRC_PATH@/LinearMath/btQuickprof.cpp \
	@BULLET_SRC_PATH@/LinearMath/btVector3.h \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btAxisSweep3.h \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h	 \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btDispatcher.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btDispatcher.h	 \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp \
	@BULLET_SRC_PATH@/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/SphereTriangleDetector.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCollisionDispatcher.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCollisionObject.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCollisionObject.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCollisionWorld.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCollisionWorld.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btManifoldResult.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btManifoldResult.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSimulationIslandManager.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btUnionFind.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionDispatch/btUnionFind.h		 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btBoxShape.cpp		 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConeShape.cpp		 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btEmptyShape.h		 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btSphereShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleCallback.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btBoxShape.h		 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConeShape.h		 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btSphereShape.h		 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConvexHullShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h     \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h   	 	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConvexHullShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btStaticPlaneShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleMesh.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btCollisionMargin.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConvexShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btMinkowskiSumShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleMesh.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btCollisionShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConvexShape.h			 	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btMultiSphereShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btStridingMeshInterface.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btCollisionShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btMultiSphereShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTetrahedronShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleMeshShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btCompoundShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btOptimizedBvh.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTetrahedronShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btCompoundShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btCylinderShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btOptimizedBvh.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleBuffer.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConcaveShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btCylinderShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleBuffer.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btConcaveShape.h	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btEmptyShape.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h \
	@BULLET_SRC_PATH@/BulletCollision/CollisionShapes/btTriangleCallback.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkEpa.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp\
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkEpa.h		 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btConvexCast.h	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h\
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btPointCollector.h	 \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h \
	@BULLET_SRC_PATH@/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp

endif