libode_la_includedir = $(includedir)/ode
libode_la_include_HEADERS = \
                collision.h \
                collision_space.h \
                collision_trimesh.h \
                common.h \
                compatibility.h \
                contact.h \
                enums.h \
                error.h \
                export-dif.h \
                mass.h \
                matrix.h \
                memory.h \
                misc.h \
                objects.h \
                ode.h  \
                odeconfig.h \
                odecpp.h \
                odecpp_collision.h \
                odeinit.h \
                odemath.h \
                rotation.h \
                timer.h

EXTRA_DIST = README
